--- a/language/de.xml
+++ b/language/de.xml
@@ -63,4 +63,19 @@
 		<item name="wcf.acp.bbcode.videoprovider.add"><![CDATA[Videoanbieter hinzufügen]]></item>
 		<item name="wcf.acp.bbcode.videoprovider.edit"><![CDATA[Videoanbieter bearbeiten]]></item>
 	</category>
+	
+	<category name="wcf.bbcode">
+		<item name="wcf.bbcode.code.c.title"><![CDATA[C-Quellcode]]></item>
+		<item name="wcf.bbcode.code.css.title"><![CDATA[CSS-Quellcode]]></item>
+		<item name="wcf.bbcode.code.diff.title"><![CDATA[Unterschiede-Datei]]></item>
+		<item name="wcf.bbcode.code.html.title"><![CDATA[HTML-Quellcode]]></item>
+		<item name="wcf.bbcode.code.java.title"><![CDATA[Java-Quellcode]]></item>
+		<item name="wcf.bbcode.code.js.title"><![CDATA[JavaScript-Quellcode]]></item>
+		<item name="wcf.bbcode.code.perl.title"><![CDATA[Perl-Quellcode]]></item>
+		<item name="wcf.bbcode.code.php.title"><![CDATA[PHP-Quellcode]]></item>
+		<item name="wcf.bbcode.code.plain.title"><![CDATA[Quellcode]]></item>
+		<item name="wcf.bbcode.code.sql.title"><![CDATA[SQL-Abfrage]]></item>
+		<item name="wcf.bbcode.code.tpl.title"><![CDATA[Smarty-Template]]></item>
+		<item name="wcf.bbcode.code.xml.title"><![CDATA[XML-Quellcode]]></item>
+	</category>
 </language>
