--- a/language/de.xml
+++ b/language/de.xml
@@ -77,5 +77,6 @@
 		<item name="wcf.bbcode.code.sql.title"><![CDATA[SQL-Abfrage]]></item>
 		<item name="wcf.bbcode.code.tpl.title"><![CDATA[Smarty-Template]]></item>
 		<item name="wcf.bbcode.code.xml.title"><![CDATA[XML-Quellcode]]></item>
+		<item name="wcf.bbcode.quote.title"><![CDATA[{@$quoteAuthor} schrieb:]]></item>
 	</category>
 </language>
