--- a/language/de.xml
+++ b/language/de.xml
@@ -80,4 +80,8 @@
 		<item name="wcf.bbcode.code.xml.title"><![CDATA[XML-Quellcode]]></item>
 		<item name="wcf.bbcode.quote.title"><![CDATA[{@$quoteAuthor} schrieb:]]></item>
 	</category>
+	
+	<category name="wcf.smiley.category">
+		<item name="wcf.smiley.category.title0"><![CDATA[Standard-Kategorie]]></item>
+	</category>
 </language>
