--- a/language/de.xml
+++ b/language/de.xml
@@ -6,6 +6,11 @@
 		<item name="wcf.acp.menu.link.bbcode.add"><![CDATA[BBCode hinzufügen]]></item>
 		<item name="wcf.acp.menu.link.bbcode.videoprovider.list"><![CDATA[Videoanbieter auflisten]]></item>
 		<item name="wcf.acp.menu.link.bbcode.videoprovider.add"><![CDATA[Videoanbieter hinzufügen]]></item>
+		<item name="wcf.acp.menu.link.smiley"><![CDATA[Smileys]]></item>
+		<item name="wcf.acp.menu.link.smiley.list"><![CDATA[Smileys auflisten]]></item>
+		<item name="wcf.acp.menu.link.smiley.add"><![CDATA[Smileys hinzufügen]]></item>
+		<item name="wcf.acp.menu.link.smiley.category.list"><![CDATA[Smiley-Kategorien auflisten]]></item>
+		<item name="wcf.acp.menu.link.smiley.category.add"><![CDATA[Smiley-Kategorie hinzufügen]]></item>
 	</category>
 	
 	<category name="wcf.acp.bbcode">
@@ -62,6 +67,22 @@
 		<item name="wcf.acp.bbcode.videoprovider.list"><![CDATA[Videoanbieter]]></item>
 		<item name="wcf.acp.bbcode.videoprovider.add"><![CDATA[Videoanbieter hinzufügen]]></item>
 		<item name="wcf.acp.bbcode.videoprovider.edit"><![CDATA[Videoanbieter bearbeiten]]></item>
+	</category>
+	
+	<category name="wcf.acp.smiley">
+		<!-- Fields -->
+		<item name="wcf.acp.smiley.category.data"><![CDATA[Daten der Smiley-Kategorie]]></item>
+		<item name="wcf.acp.smiley.category.title"><![CDATA[Name]]></item>
+		<item name="wcf.acp.smiley.category.delete.sure"><![CDATA[Möchtest du die Smiley-Kategorie &bdquo;{$smileyCategory->title|language}&ldquo; wirklich löschen?]]></item>
+		
+		<!-- Headlines -->
+		<item name="wcf.acp.smiley.list"><![CDATA[Smiley]]></item>
+		<item name="wcf.acp.smiley.add"><![CDATA[Smiley hinzufügen]]></item>
+		<item name="wcf.acp.smiley.edit"><![CDATA[Smiley bearbeiten]]></item>
+		
+		<item name="wcf.acp.smiley.category.list"><![CDATA[Smiley-Kategorien]]></item>
+		<item name="wcf.acp.smiley.category.add"><![CDATA[Smiley-Kategorie hinzufügen]]></item>
+		<item name="wcf.acp.smiley.category.edit"><![CDATA[Smiley-Kategorie bearbeiten]]></item>
 	</category>
 	
 	<category name="wcf.bbcode">
