--- a/language/de.xml
+++ b/language/de.xml
@@ -81,5 +81,6 @@
 		<item name="wcf.bbcode.code.tpl.title"><![CDATA[Smarty-Template]]></item>
 		<item name="wcf.bbcode.code.xml.title"><![CDATA[XML-Quellcode]]></item>
 		<item name="wcf.bbcode.quote.title"><![CDATA[{@$quoteAuthor} schrieb:]]></item>
+		<item name="wcf.bbcode.spoiler.show"><![CDATA[Spoiler anzeigen]]></item>
 	</category>
 </language>
