Renaming VideoProviders to MediaProviders

--- a/language/de.xml
+++ b/language/de.xml
@@ -4,8 +4,8 @@
 		<item name="wcf.acp.menu.link.bbcode"><![CDATA[BBCodes]]></item>
 		<item name="wcf.acp.menu.link.bbcode.list"><![CDATA[BBCodes auflisten]]></item>
 		<item name="wcf.acp.menu.link.bbcode.add"><![CDATA[BBCode hinzufügen]]></item>
-		<item name="wcf.acp.menu.link.bbcode.videoprovider.list"><![CDATA[Videoanbieter auflisten]]></item>
-		<item name="wcf.acp.menu.link.bbcode.videoprovider.add"><![CDATA[Videoanbieter hinzufügen]]></item>
+		<item name="wcf.acp.menu.link.bbcode.mediaprovider.list"><![CDATA[Medienanbieter auflisten]]></item>
+		<item name="wcf.acp.menu.link.bbcode.mediaprovider.add"><![CDATA[Medienanbieter hinzufügen]]></item>
 	</category>
 	
 	<category name="wcf.acp.bbcode">
@@ -29,22 +29,22 @@
 		<item name="wcf.acp.bbcode.attribute.useText"><![CDATA[Inhalt übernehmen]]></item>
 		<item name="wcf.acp.bbcode.attribute.useText.description"><![CDATA[Soll der Inhalt des BBCodes als Wert für dieses Attribut übernommen werden, wenn es nicht gesetzt ist?]]></item>
 		
-		<item name="wcf.acp.bbcode.videoprovider.data"><![CDATA[Daten des Videoanbieters]]></item>
-		<item name="wcf.acp.bbcode.videoprovider.title"><![CDATA[Videoanbieter]]></item>
-		<item name="wcf.acp.bbcode.videoprovider.regex"><![CDATA[Regulärer Ausdruck]]></item>
-		<item name="wcf.acp.bbcode.videoprovider.regex.description"><![CDATA[Geben Sie hier das Linkformat als <a href="{@$__wcf->getPath('wcf')}acp/dereferrer.php?url=http%3A%2F%2Fde.wikipedia.org%2Fwiki%2FRegul%25C3%25A4rer_Ausdruck">Regulären Ausdruck</a> an. <br />
+		<item name="wcf.acp.bbcode.mediaprovider.data"><![CDATA[Daten des Medienanbieters]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.title"><![CDATA[Medienanbieter]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.regex"><![CDATA[Regulärer Ausdruck]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.regex.description"><![CDATA[Geben Sie hier das Linkformat als <a href="{@$__wcf->getPath('wcf')}acp/dereferrer.php?url=http%3A%2F%2Fde.wikipedia.org%2Fwiki%2FRegul%25C3%25A4rer_Ausdruck">Regulären Ausdruck</a> an. <br />
 		Mehrere Ausdrücke können zeilenweise angegeben werden. <br />
-		Beispiele für Video-ID Erkennungen:
+		Beispiele für Media-ID Erkennungen:
 		<ul>
-			<li>(?&lt;ID&gt;[0-9]+) - Erkennt eine Video-ID aus Zahlen</li>
-			<li>(?&lt;ID&gt;[0-9a-zA-Z]+) - Erkennt eine alphanumerische Video-ID</li>
+			<li>(?&lt;ID&gt;[0-9]+) - Erkennt eine Media-ID aus Zahlen</li>
+			<li>(?&lt;ID&gt;[0-9a-zA-Z]+) - Erkennt eine alphanumerische Media-ID</li>
 		</ul><br />
 		Beachten Sie, dass eine fehlerhafte Angabe dazu führt, dass der Link nicht korrekt erkannt wird.]]></item>
-		<item name="wcf.acp.bbcode.videoprovider.html"><![CDATA[HTML-Code]]></item>
-		<item name="wcf.acp.bbcode.videoprovider.html.description"><![CDATA[{literal}Geben Sie hier den HTML-Code für das Video an. Variablen im Format {$variable} werden durch die entsprechende benannte Untergruppe des Regulären Ausdrucks ersetzt.<br />
+		<item name="wcf.acp.bbcode.mediaprovider.html"><![CDATA[HTML-Code]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.html.description"><![CDATA[{literal}Geben Sie hier den HTML-Code für das Media an. Variablen im Format {$variable} werden durch die entsprechende benannte Untergruppe des Regulären Ausdrucks ersetzt.<br />
 		Beispiel:<br />
-		{$ID} - Wird durch die beispielhaften Video-IDs der Erklärung oberhalb ersetzt.{/literal}]]></item>
-		<item name="wcf.acp.bbcode.videoprovider.delete.sure"><![CDATA[Möchten Sie den Videoanbieter &bdquo;{$videoProvider->title}&ldquo; wirklich löschen?]]></item>
+		{$ID} - Wird durch die beispielhaften Media-IDs der Erklärung oberhalb ersetzt.{/literal}]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.delete.sure"><![CDATA[Möchten Sie den Medienanbieter &bdquo;{$mediaProvider->title}&ldquo; wirklich löschen?]]></item>
 		
 		<!-- Errors -->
 		<item name="wcf.acp.bbcode.error.bbcodeTag.inUse"><![CDATA[Dieser BBCode ist bereits vorhanden.]]></item>
@@ -54,16 +54,16 @@
 		
 		<item name="wcf.acp.bbcode.attribute.error.validationPattern.invalid"><![CDATA[Dies ist kein gültiger Regulärer Ausdruck.]]></item>
 		
-		<item name="wcf.acp.bbcode.videoprovider.error.regex.invalid"><![CDATA[Dies ist kein gültiger Regulärer Ausdruck.]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.error.regex.invalid"><![CDATA[Dies ist kein gültiger Regulärer Ausdruck.]]></item>
 		
 		<!-- Headlines -->
 		<item name="wcf.acp.bbcode.list"><![CDATA[BBCodes]]></item>
 		<item name="wcf.acp.bbcode.add"><![CDATA[BBCode hinzufügen]]></item>
 		<item name="wcf.acp.bbcode.edit"><![CDATA[BBCode bearbeiten]]></item>
 		
-		<item name="wcf.acp.bbcode.videoprovider.list"><![CDATA[Videoanbieter]]></item>
-		<item name="wcf.acp.bbcode.videoprovider.add"><![CDATA[Videoanbieter hinzufügen]]></item>
-		<item name="wcf.acp.bbcode.videoprovider.edit"><![CDATA[Videoanbieter bearbeiten]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.list"><![CDATA[Medienanbieter]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.add"><![CDATA[Medienanbieter hinzufügen]]></item>
+		<item name="wcf.acp.bbcode.mediaprovider.edit"><![CDATA[Medienanbieter bearbeiten]]></item>
 	</category>
 	
 	<category name="wcf.bbcode">
